@@ -61,9 +61,6 @@ Additions will not be possible until adequate space is freed up.
 .B \-r
 Raise the core file size limit to the maximum allowable.
 .TP
-.B \-b
-Run a managed instanced (mnemonic: buckets)\n".
-.TP
 .B \-f <factor>
 Use <factor> as the multiplier for computing the sizes of memory chunks that
 items are stored in. A lower value may result in less wasted memory depending
